CRT-361 Fix toolbar button label text to not wrap

--- a/packages/ag-charts-community/src/chart/toolbar/toolbarStyles.css
+++ b/packages/ag-charts-community/src/chart/toolbar/toolbarStyles.css
@@ -132,6 +132,7 @@
     transition:
         background-color 0.25s ease-in-out,
         color 0.25s ease-in-out;
+    white-space: nowrap;
 }
 
 .ag-charts-toolbar__button:first-child {
